* cont.c (rb_fiber_start): don't enqueue Qnil to async_errinfo_queue.   rb_vm_make_jump_tag_but_local_jump() could return Qnil (ex. when   finished by Thread.exit). [ruby-dev:45218] [Bug #5993]

* test/ruby/test_fiber.rb (test_exit_in_fiber): add test for it.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38414 b2dd03c8-39d4-4d8f-98ff-823fe69b080e